--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,8 @@ footer ul li {
 
 @media only screen and (min-width: 768px) {
     .section-biography .container-outer {
+        margin: auto;
+        width: 80%;
         background: #fff;
     }
 }
